# autoagents-bench

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  benchmark.yaml  benchmark_results.json  benchmark_results_100.json  benchmark_results_250.json  main.py  plot_benchmarks.py  pyproject.toml
_src/: crewai_bench.py  langgraph_bench.py  result_validation.py  trip_tool.py
src/: main.rs  trip.rs
