[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
autoagents = { git = "https://github.com/liquidos-ai/AutoAgents", features = [
  "openai",
] }
autoagents-derive = { git = "https://github.com/liquidos-ai/AutoAgents" }
rig-core = { version = "0.19.0", features = ["all"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
