[package]
name = "autoagents-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.99"
autoagents = { git = "https://github.com/liquidos-ai/AutoAgents", features = [
  "openai",
] }
autoagents-derive = { git = "https://github.com/liquidos-ai/AutoAgents" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
polars = {version = "0.51.0", features = ["parquet", "dtype-datetime", "lazy"] }
